Final changes done before printing

--- a/thesis_skel/thesis_CRnNu.tex
+++ b/thesis_skel/thesis_CRnNu.tex
@@ -36,7 +36,7 @@ There are many proposed ways in which \glspl{CR} could get accelerated by astrop
 \begin{figure}[t!]
   \centering
   \includegraphics[width=14.5cm]{thesis_figures/CRnNu/Hillas_modified.png}
-  \caption{An updated version of Hillas plot. Different source classes are plotted according to their radial size, $R$ (abscissa), and magnetic field strength, $B$. The solid and dashed lines indicate the lower limits above which confinement of protons (red) and iron (blue) nuclei with energy $10^{20}$eV are possible. The solid and dashed lines indicate different shock velocities. Taken from~\cite{AlvesBatista:2019tlv}}.
+  \caption{An updated version of Hillas plot. Different source classes are plotted according to their radial size, $R$ (abscissa), and magnetic field strength, $B$. The solid and dashed lines indicate the lower limits above which confinement of protons (red) and iron (blue) nuclei with energy $10^{20}$eV are possible. The solid and dashed lines indicate different shock velocities. Taken from~\cite{AlvesBatista:2019tlv}.}
   \label{fig:Hillas_modified}
 \end{figure}
 
@@ -107,7 +107,7 @@ The study of \glspl{CR} to constrain their properties and the relevant sources r
 \begin{figure}[t!]
   \centering
   \includegraphics[width=14.5cm]{thesis_figures/CRnNu/all_particle_spectrum.png}
-  \caption{Cosmic flux vs Energy spectrum. The colour indicates the experiment used to record the flux. At lower energies we have much detailed information about the composition. At high energies only the all particle spectrum is shown due to low flux. Also shown is the gamma ray spectrum recorded by FERMI and the neutrino flux measurement by IceCube. Taken from~\cite{evoli_2018_2360277}}.
+  \caption{Cosmic flux vs Energy spectrum. The colour indicates the experiment used to record the flux. At lower energies we have much detailed information about the composition. At high energies only the all particle spectrum is shown due to low flux. Also shown is the gamma ray spectrum recorded by FERMI and the neutrino flux measurement by IceCube. Taken from~\cite{evoli_2018_2360277}.}
   \label{fig:CR-spectrum}
 \end{figure}
 \subsubsection*{Cosmic Ray spectrum}
@@ -145,7 +145,7 @@ The types of particles the \gls{CR} flux at Earth is made of is called the \gls*
 \begin{figure}[t!]
   \centering
   \includegraphics[width=14.5cm]{thesis_figures/CRnNu/Composition_measurement.png}
-  \caption{Measurements of mass composition by different experiments. $<X_{\text{max}}>$ (top) and its fluctuations $\sigma<X_{\text{max}}>$ (bottom). The red and blue lines are obtained from simulations with different hadronic interaction models. Taken from~\cite{ParticleDataGroup:2024cfk}}.
+  \caption{Measurements of mass composition by different experiments. $<X_{\text{max}}>$ (top) and its fluctuations $\sigma<X_{\text{max}}>$ (bottom). The red and blue lines are obtained from simulations with different hadronic interaction models. Taken from~\cite{ParticleDataGroup:2024cfk}.}
   \label{fig:CR-composition}
 \end{figure}
 
@@ -160,7 +160,7 @@ The future advancements of the AugerPrime~\cite{ANASTASI2022167497} will further
 \begin{figure}[t!]
   \centering
   \includegraphics[width=14.5cm]{thesis_figures/CRnNu/apjac7d4ef1_hr.jpg}
-  \caption{Localized excess or Li-Ma~\cite{Li:1983fv} significance map at energies above 41 EeV and within a top-hat search angle $\Psi = 24^\circ$ in Galactic coordinates. The gray line indicates the super galactic plane. Area outside the field of view of the Observatory is shown in white. The dark red areas indicate the possible source locations of extragalactic \glspl{UHECR}. Taken from~\cite{Abreu_2022}}.
+  \caption{Localized excess or Li-Ma~\cite{Li:1983fv} significance map at energies above 41 EeV and within a top-hat search angle $\Psi = 24^\circ$ in Galactic coordinates. The gray line indicates the super galactic plane. Area outside the field of view of the Observatory is shown in white. The dark red areas indicate the possible source locations of extragalactic \glspl{UHECR}. Taken from~\cite{Abreu_2022}.}
   \label{fig:CR-anisotropy}
 \end{figure}
 
@@ -179,7 +179,7 @@ Photons again offer another window to look into the origin, propagation and sour
 \begin{figure}[t!]
   \centering
   \includegraphics[width=14.5cm]{thesis_figures/CRnNu/Photon-limits.png}
-  \caption{Summary of the current upper limits on the integral photon flux determined by Pierre Auger Observatory and other experiments~\cite{PierreAuger:2024ayl}}.
+  \caption{Summary of the current upper limits on the integral photon flux determined by Pierre Auger Observatory and other experiments~\cite{PierreAuger:2024ayl}.}
   \label{fig:Auger-Photon-limits}
 \end{figure}
 
@@ -193,7 +193,7 @@ Neutrino ($\nu$)~\cite{10.1063/1.2995181} (neut-neutral, ino-small) is an elemen
 \begin{figure}[t!]
   \centering
   \includegraphics[width=14.5cm]{thesis_figures/CRnNu/Neutrino spectra.jpg}
-  \caption{Grand Unified neutrino spectra at Earth. Taken from~\cite{Vitagliano:2019yzm}}.
+  \caption{Grand Unified neutrino spectra at Earth. Taken from~\cite{Vitagliano:2019yzm}.}
   \label{fig:Neutrino-spectra}
 \end{figure}
 
@@ -233,7 +233,7 @@ Other interactions such as beta decay of neutrons and nuclei ($n \longrightarrow
 \begin{figure}[t!]
   \centering
   \includegraphics[width=12.5cm]{thesis_figures/CRnNu/Oscillation_sim_ternary.pdf}
-  \caption{A ternary plot to show the neutrino flavor oscillations. Two different flux ratios per flavor (circle, triangle) based on different production mechanisms are shown. Flavors expected after propagation are also marked (open shapes). Taken from~\cite{Ahlers:ISAPP2022}}.
+  \caption{A ternary plot to show the neutrino flavor oscillations. Two different flux ratios per flavor (circle, triangle) based on different production mechanisms are shown. Flavors expected after propagation are also marked (open shapes). Taken from~\cite{Ahlers:ISAPP2022}.}
   \label{fig:Oscillation_ternary}
 \end{figure}
 
@@ -251,8 +251,8 @@ Depending on the type of source and how far the said source is one can calculate
 \begin{figure}[t!]
   \centering
   \includegraphics[width=14.5cm]{thesis_figures/CRnNu/apjab05cef9_hr.jpg}
-  \caption{Allowed confidence ranges for cosmogenic neutrino fluxes obtained by varying the parameters regarding the source distribution and emission. The figure illustrates the two mechanisms of production of with the first peak corresponding to neutrinos from neutron decay and the peak at 10$^{18}$eV corresponds to neutrinos from meson decay. Taken from~\cite{Heinze:2019jou}}
-  \label{fig:model_nu_auger_mixed}.
+  \caption{Allowed confidence ranges for cosmogenic neutrino fluxes obtained by varying the parameters regarding the source distribution and emission. The figure illustrates the two mechanisms of production of with the first peak corresponding to neutrinos from neutron decay and the peak at 10$^{18}$eV corresponds to neutrinos from meson decay. Taken from~\cite{Heinze:2019jou}.}
+  \label{fig:model_nu_auger_mixed}
 \end{figure}
 
 Cosmogenic neutrinos are produced either as a consequence of the \gls{GZK} mechanism discussed in section~\ref{subsubsec:GZK} or due to the interactions of \glspl{UHECR} with \gls{EBL}. They were first suggested by Berezinsky and Zatsepin in 1969~\cite{Berezinsky:1970xj}. The processes involved are similar to those for astrophysical neutrinos albeit the proton/nuclei interact with the CMB/EBL photon instead of the photons from the radiation fields. The two main processes are the same as that for the GZK mechanism i.e. decay of charged pions produced in photo-pion production, eq.~\ref{eq:GZK} and the beta decay of neutrons and nuclei produced in photo-disintegration, eq.~\ref{eq:Pdisinteg}. \gls{CMB} mainly affects the protons~\cite{Ehlert_2024} during their propagation which form a large fraction of the \glspl{UHECR} traversing the universe while the EBL plays an important role in the case of other nuclei~\cite{Aloisio_2015}. 
@@ -292,7 +292,7 @@ The charged lepton can produce detectable signals via ionization, Cherenkov radi
 \begin{figure}[t!]
   \centering
   \includegraphics[width=14.5cm]{thesis_figures/CRnNu/UHE_nu_techniques.pdf}
-  \caption{Different detection techniques for UHE neutrinos. Ice and Water based Cherenkov detectors are sensitive to atmospheric, galactic neutrinos and some extragalactic neutrinos while radio and air shower detectors are sensitive to very high energy neutrinos with other techniques filling the gaps. The spectral indices of the different components are estimations. Taken from~\cite{Arguelles:2024xkx}}.
+  \caption{Different detection techniques for UHE neutrinos. Ice and Water based Cherenkov detectors are sensitive to atmospheric, galactic neutrinos and some extragalactic neutrinos while radio and air shower detectors are sensitive to very high energy neutrinos with other techniques filling the gaps. The spectral indices of the different components are estimations. Taken from~\cite{Arguelles:2024xkx}.}
   \label{fig:UHE-nu-techniques}
 \end{figure}
 
@@ -319,7 +319,7 @@ The charged lepton can produce detectable signals via ionization, Cherenkov radi
 \begin{figure}[t!]
   \centering
   \includegraphics[width=14.5cm]{thesis_figures/CRnNu/Nu_flux_measurement.png}
-  \caption{Measured neutrino flux for atmospheric and astrophysical neutrinos. At high energies for the diffuse flux of cosmogenic neutrinos there are upper limits from IceCube and the Pierre Auger Observatory. Taken from~\cite{ParticleDataGroup:2024cfk}}.
+  \caption{Measured neutrino flux for atmospheric and astrophysical neutrinos. At high energies for the diffuse flux of cosmogenic neutrinos there are upper limits from IceCube and the Pierre Auger Observatory. Taken from~\cite{ParticleDataGroup:2024cfk}.}
   \label{fig:Nu_flux_measurement}
 \end{figure}
 
@@ -334,7 +334,7 @@ The charged lepton can produce detectable signals via ionization, Cherenkov radi
     \includegraphics[width=14.5cm]{thesis_figures/CRnNu/science-abg3395-f2.jpg}
     \caption{Left:The sky region around the most significant neutrino excess spot in the Northern Hemisphere close to NGC 1068. The plot shows a fine scan of the region around the hottest spot. The hotspot is marked by a yellow cross and the dot marks the position of NGC 1068. Further, 
     the solid and dashed contours show the 68\% (solid) and 95\% (dashed) confidence regions of
-    the hot spot localization. Right: The distribution of the squared angular distance between NGC 1068 and the reconstructed event direction. Taken from~\cite{Icecube_2022}}.
+    the hot spot localization. Right: The distribution of the squared angular distance between NGC 1068 and the reconstructed event direction. Taken from~\cite{Icecube_2022}.}
     \label{fig:NGC1068_excess}
   \end{figure}
 
@@ -343,7 +343,7 @@ The charged lepton can produce detectable signals via ionization, Cherenkov radi
   \begin{figure}[t!]
     \centering
     \includegraphics[width=14.5cm]{thesis_figures/CRnNu/science-adc9818-f1.jpg}
-    \caption{Galactic plane with different messengers. The observation of neutrinos at the bottom is the final piece added to this picture. Taken from~\cite{Galactic_plane_nu_2023}}.
+    \caption{Galactic plane with different messengers. The observation of neutrinos at the bottom is the final piece added to this picture. Taken from~\cite{Galactic_plane_nu_2023}.}
     \label{fig:Galactic_plane_nu_messengers}
   \end{figure}
 
@@ -358,7 +358,7 @@ The charged lepton can produce detectable signals via ionization, Cherenkov radi
 \begin{figure}[t!]
   \centering
   \includegraphics[width=14.5cm]{thesis_figures/CRnNu/neutrinolimits_icrc2023_wiki.pdf}
-  \caption{Current upper limits on the diffuse flux of neutrinos from different experiments. Only the differential limits are shown. Also shown are the expected neutrino fluxes from different theoretical predictions for comparison. Taken from~\cite{PierreAuger:2023pjg}}.
+  \caption{Current upper limits on the diffuse flux of neutrinos from different experiments. Only the differential limits are shown. Also shown are the expected neutrino fluxes from different theoretical predictions for comparison. Taken from~\cite{PierreAuger:2023pjg}.}
   \label{fig:Nu_limits_auger}
 \end{figure}
 
