--- a/thesis_skel/thesis_DGH.tex
+++ b/thesis_skel/thesis_DGH.tex
@@ -109,7 +109,7 @@ Table~\ref{tab:systematic_uncertainties} summarizes the  source of systematic un
     Total uncertainty & +19.5\% \enspace -13\% \\
     \hline
   \end{tabular}
-  \caption{Systematic uncertainties and their contribution to the exposure}
+  \caption{Systematic uncertainties and their contribution to the exposure.}
   \label{tab:systematic_uncertainties}
 \end{table}
 \clearpage
@@ -320,7 +320,7 @@ The diffuse flux limit and sensitivity for Auger is dominated by the Earth-skimm
 \begin{figure}[h!]
   \centering
   \includegraphics[width=14.5cm]{thesis_figures/ExpLimits/limits_and_models_DGL.pdf}
-  \caption{Comparison of the combined limits obtained in this analysis to the current upper limits on the diffuse flux of cosmogenic neutrinos. The predicted fluxes from a few cosmogenic and astrophysical models is also shown for comparison. The plot has been modified to add the limits of this analysis using code provided by J. Muñiz and is originally taken from ~\cite{PierreAuger:2023pjg}}
+  \caption{Comparison of the combined limits obtained in this analysis to the current upper limits on the diffuse flux of cosmogenic neutrinos. The predicted fluxes from a few cosmogenic and astrophysical models is also shown for comparison. The plot has been modified to add the limits of this analysis using code provided by J. Muñiz and is originally taken from ~\cite{PierreAuger:2023pjg}.}
   \label{fig:Limit_comp_overall}
 \end{figure}
 
