--- a/thesis_skel/thesis_EAS.tex
+++ b/thesis_skel/thesis_EAS.tex
@@ -146,7 +146,7 @@ Charged particles moving through the atmosphere can also produce Cherenkov light
 \begin{figure}[t!]
     \centering
     \includegraphics[width=14.5cm]{thesis_figures/EAS/EAS-Detection-Techniques-mine.pdf}
-    \caption{Sketch of various ways to study experimentally extensive air showers. Inspired from~\cite{article_2001_kampert}}. 
+    \caption{Sketch of various ways to study experimentally extensive air showers. Inspired from~\cite{article_2001_kampert}.} 
     \label{fig:EAS_det_techniques}
 \end{figure}
 
