--- a/thesis_skel/thesis_setup.tex
+++ b/thesis_skel/thesis_setup.tex
@@ -7,7 +7,7 @@
 \begin{figure}[h!]
 \centering
 \includegraphics[width=\textwidth]{thesis_figures/Setup/map_srij_version.pdf}
-\caption{Layout of the Pierre Auger Observatory in Argentina. The black lines indicate the field of view of each telescope. Redone from~\cite{Jannis_thesis}. }
+\caption{Layout of the Pierre Auger Observatory in Argentina. The black lines indicate the field of view of each telescope. Redone from~\cite{Jannis_thesis}.}
 \label{fig:Auger_map}
 \end{figure}
 
@@ -92,7 +92,7 @@ A schematic of the logic of the trigger system is shown in Fig.~\ref{fig:SD_trig
 \begin{figure}[h!]
   \centering
   \includegraphics[width=\textwidth]{thesis_figures/Setup/Trigger_logic.png}
-  \caption{Schematics of the hierarchy of the trigger system of the Auger surface detector.}
+  \caption{Schematics of the hierarchy of the trigger system of the Surface Detector array.}
   \label{fig:SD_trigger_logic}
 \end{figure}
 
@@ -205,7 +205,7 @@ The T3 level aims to build a condition based on both spatial and temporal combin
 \begin{figure}[t!]
   \centering
   \includegraphics[width=0.75\textwidth]{thesis_figures/Setup/T4_modes.png}
-  \caption{Different possible minimal T4 configurations. In blue are the three possible minimal 4C$_1$ configurations while in green are the two possible minimal 3ToT configurations}
+  \caption{Different possible minimal T4 configurations. In blue are the three possible minimal 4C$_1$ configurations while in green are the two possible minimal 3ToT configurations.}
   \label{fig:T4_config}
 \end{figure}
 
@@ -225,7 +225,7 @@ In the context of this thesis, the data from the ongoing upgrade and the precedi
 \begin{figure}[t!]
   \centering
   \includegraphics[width=0.5\textwidth]{thesis_figures/Setup/T5_modes.png}
-  \caption{Two T5 configurations. The dark shaded hexagon represents the 5T5 condition while the entire shaded hexagons represents the 6T5 hexagon}
+  \caption{Two T5 configurations. The dark shaded hexagon represents the 5T5 condition while the entire shaded hexagons represents the 6T5 hexagon.}
   \label{fig:T5_config}
 \end{figure}
 
