Some more grammar changes

--- a/thesis_skel/thesis_DGL.tex
+++ b/thesis_skel/thesis_DGL.tex
@@ -374,9 +374,9 @@ The remaining sample was unblinded in two parts: A 20\% test sample was unblinde
 \subsection{Pre-selection Cuts}
 \label{subsec:nu_sel_preselcut}
 
-The pre-selection cuts are applied based on the unique properties of "young" neutrino like showers in comparison to older nucleon like showers. The cuts are the same as used in GAP 2013 with a slight modification to include MoPS and ToTd. These pre-selection cuts are applied in the same way to both the neutrino and background training samples. 
+The pre-selection cuts are applied based on the unique properties of "young" neutrino like showers in comparison to older nucleon like showers. The cuts are the same as used in~\cite{gap_note_2013} with a slight modification to include MoPS and ToTd. These pre-selection cuts are applied in the same way to both the neutrino and background training samples. 
 \begin{description}
-  \item ~\textbf{Inclined Shower Selection:} This cut aims to select showers which fall in the given angular window. The reconstructed zenith angle of each event is required to be in the range 58.5$^{\circ} < \mathrm{\theta_{Rec} < 76.5^{\circ}}$. The range is extended by 1.5$^\circ$ on both sides in comparison to the simulated values from the simulations to account for the angular resolution of the detector. Further, the error on the reconstructed angle, $\mathrm{\delta \theta_{\text{Rec}}}$ is required to be smaller than $3^\circ$ to ensure the quality of angular reconstruction. The efficiency of this cut is found to be 89 (90)\% without the cut on $\mathrm{\delta \theta_{\text{Rec}}}$ and the efficiency decreases to 72 (70)\% for CC (NC) neutrinos with the restriction on $\mathrm{\delta \theta_{\text{Rec}}}$. With the cut on zenith error the efficiency reduces to  The angular distribution of the background sample is shown in Fig.~\ref{fig:Pre_cut_summary}.
+  \item ~\textbf{Inclined Shower Selection:} This cut aims to select showers which fall in the given angular window. The reconstructed zenith angle of each event is required to be in the range 58.5$^{\circ} < \mathrm{\theta_{Rec} < 76.5^{\circ}}$. The range is extended by 1.5$^\circ$ on both sides in comparison to the simulated values from the simulations to account for the angular resolution of the detector. Further, the error on the reconstructed angle, $\mathrm{\delta \theta_{\text{Rec}}}$ is required to be smaller than $3^\circ$ to ensure the quality of angular reconstruction. The efficiency of this cut is found to be 89 (90)\% without the cut on $\mathrm{\delta \theta_{\text{Rec}}}$ and the efficiency decreases to 72 (70)\% for CC (NC) neutrinos with the restriction on $\mathrm{\delta \theta_{\text{Rec}}}$. The angular distribution of the background sample is shown in Fig.~\ref{fig:Pre_cut_summary}.
   \item ~\textbf{Fiducial Quality Cut:} This cut also remains unchanged when compared to the previous analysis. The main aim of the cut is to ensure that the shower core for the selected event is completely contained inside the array and the stations which are used for the analysis of the event are operational. This is ensured by requiring the event to satisfy the 6T5 trigger condition. The efficiency of the cut is 100\% for the neutrino simulations by design and for the background sample this cut leads to a reduction of $\sim 20\%$ events across the zenith range as shown in Fig.~\ref{fig:Pre_cut_summary}   
   \item ~\textbf{Young Shower Selection:} This cut tries to ensure the selection of events with a high electromagnetic component at ground. For this purpose events with stations having FADC traces spread in time need to be selected. As mentioned previously ToT, ToTd and MoPS triggers being more sensitive to the presence of high electromagnetic component can be used for this young shower selection. This cut ensures that more than 75\% of stations in the T5 hexagon satisfy the ToT/MoPS/ToTd condition. The 75\% fraction is calculated on a per-event basis and the hexagon could have stations with mixtures of these triggers. The cut retains most of the neutrino events and at the same time is highly effective in rejecting background especially for high angles as shown in the Fig.~\ref{fig:Pre_cut_summary}.
   
@@ -407,7 +407,7 @@ The last step for the $\nu$ selection and identification involves \gls{FDA} also
 \end{equation}
 with $\mu = \frac{n_s \mu_s + n_B \mu_b}{n_s + n_b}$ is the overall mean 
 
-The between class matrix $S_{W}$ is given as
+The within-class matrix $S_{W}$ is given as
 \begin{equation}
   S_{W} = \sum_{i = X_s,X_b} \sum_{j = n_s,n_b } (x^{(i)}_j - \mu_i) (x^{(i)}_j - \mu_i)^T
 \end{equation}
@@ -423,7 +423,7 @@ After finding the weight vector, the projected data for each sample is given as 
 
 \subsubsection{Fisher polynomials and training}
 \label{subsubsec:nu_sel_fisher_training}
-It is really important to find the correct features or variables to train the algorithm to achieve the best possible separation. Various combinations of input features were tested and evaluated based on the level of separation along with the shape of the tail of the background description which is important for the cut evaluation procedure. As mentioned before AoP (Fig.~\ref{fig:AoP_hist}) will remain the primary feature used for discrimination. It was also shown in~\cite{gap_note_2013} that for the DG$\mathrm{_{low}}$ channel AoPs of the earliest stations closest to the core provide the best level of discrimination between data and background. This also visualized in figs.~\ref{fig:Time_to_core},\ref{fig:Dist_to_core}. Further, the zenith angle range for the search, 58.5$^\circ < \theta < 76.5^\circ$ is subdivided into five sub-regions similar to~\cite{gap_note_2013} as shown in Fig.~\ref{fig:AoP_v_theta}. This is done to incorporate shower age while training the Fisher polynomial. The first four angular regions are $3^\circ$ each whereas the last region is $6^\circ$. This is due to the small amount of statistics observed for higher angles in the background training sample which required a larger window size. For each angular window the Fisher polynomial is trained separately to maximize the analysis performance. 
+It is really important to find the correct features or variables to train the algorithm to achieve the best possible separation. Various combinations of input features were tested and evaluated based on the level of separation along with the shape of the tail of the background description which is important for the cut evaluation procedure. As mentioned before, AoP (Fig.~\ref{fig:AoP_hist}) will remain the primary feature used for discrimination. It was also shown in~\cite{gap_note_2013} that for the DG$\mathrm{_{low}}$ channel AoPs of the earliest stations closest to the core provide the best level of discrimination between data and background. This also visualized in figs.~\ref{fig:Time_to_core},\ref{fig:Dist_to_core}. Further, the zenith angle range for the search, 58.5$^\circ < \theta < 76.5^\circ$ is subdivided into five sub-regions similar to~\cite{gap_note_2013} as shown in Fig.~\ref{fig:AoP_v_theta}. This is done to incorporate shower age while training the Fisher polynomial. The first four angular regions are $3^\circ$ each whereas the last region is $6^\circ$. This is due to the small amount of statistics observed for higher angles in the background training sample which required a larger window size. For each angular window the Fisher polynomial is trained separately to maximize the analysis performance. 
 
 \begin{figure}[t!]
   \centering
@@ -446,7 +446,7 @@ It is really important to find the correct features or variables to train the al
   \label{fig:AoP_v_theta}
 \end{figure}
 
-Different forms of the Fisher polynomial were tested, and their performance was evaluated based on the MC neutrinos passing the evaluated Fisher cut which described in the next section. In this section only two forms are mentioned, the baseline polynomials were taken to be the one described in the previous analysis~\cite{gap_note_2013}. For the first three angular regions (58.5$^\circ \leq \theta_{\text{Rec}} < 67.5^\circ$) a more stringent criterion which requires the AoPs of the first five triggered T5 stations along with their product was used to build the Fisher polynomial. For the remaining two angular regions (67.5$^\circ \leq \theta_{\text{Rec}} < 76.5^\circ$) only the AoPs of the first four triggered T5 stations along with their product were required. The form of the Fisher polynomial used in the previous analysis is given below:
+Different forms of the Fisher polynomial were tested, and their performance was evaluated based on the MC neutrinos passing the evaluated Fisher cut which is described in the next section. In this section the two forms compared are mentioned, the baseline polynomials were taken to be the one described in the previous analysis~\cite{gap_note_2013}. For the first three angular regions (58.5$^\circ \leq \theta_{\text{Rec}} < 67.5^\circ$) a more stringent criterion which requires the AoPs of the first five triggered T5 stations along with their product was used to build the Fisher polynomial. For the remaining two angular regions (67.5$^\circ \leq \theta_{\text{Rec}} < 76.5^\circ$) only the AoPs of the first four triggered T5 stations along with their product were required. The form of the Fisher polynomial used in the previous analysis is given below:
 
 \begin{equation}
   \mathcal{F} = \sum_{i=1}^{4\,\text{or}\,5} C_i \text{AoP}_i + C_p \prod_{i=1}^{4\,\text{or}\,5} \text{AoP}_i \, ,
@@ -460,9 +460,9 @@ A modified version of this baseline polynomial was used for this analysis. The p
   \mathcal{F} = \sum_{i=1}^{4} C_i \text{AoP}_i
 \end{equation}
 
-The performance comparison of the two polynomials which is also the is discussed in the next section.
+The performance comparison of the two polynomials is discussed in the next section.
 
-As mentioned before to train the Fisher polynomial 20\% of the measured data sample for the time period 2014-2021 as the background training sample. Since this is measured data at the detector it is already weighted by energy (cross-section is a function of primary energy) and zenith angle (affects available detection area). For the MC neutrino events (signal sample) which do not have this natural weighting, each event is weighted by a factor of $\omega = E_{\text{MC}}^{-1} \cdot \sin(\theta_{\text{MC}}) \cdot \cos(\theta_{\text{MC}})$. The Fig.~\ref{fig:Fisher_dists} shows the Fisher value, $\mathcal{F}$ distributions for both signal and background training distributions for all five angular regions. An excellent separation is achieved for all angular regions. 
+As mentioned before to train the Fisher polynomial 20\% of the measured data sample for the time period 2014-2021 is used as the background training sample. Since this is measured data at the detector it is already weighted by energy (cross-section is a function of primary energy) and zenith angle (affects available detection area). For the MC neutrino events (signal sample) which do not have this natural weighting, each event is weighted by a factor of $\omega = E_{\text{MC}}^{-1} \cdot \sin(\theta_{\text{MC}}) \cdot \cos(\theta_{\text{MC}})$. The Fig.~\ref{fig:Fisher_dists} shows the Fisher value, $\mathcal{F}$ distributions for both signal and background training distributions for all five angular regions. An excellent separation is achieved for all angular regions. 
 
 \begin{figure}[h!]
   \centering
