--- a/thesis_skel/thesis_CRnNu.tex
+++ b/thesis_skel/thesis_CRnNu.tex
@@ -279,7 +279,7 @@ The low interaction cross-section ($\sigma_{\nu}$)~\cite{Formaggio_2012} of neut
 \end{subequations}
 
 The products from the CC and NC interaction i.e. a lepton and the hadronic cascade can be detected in multiple ways. 
-Antineutrinos can also interact with atomic electrons leading to a $W^-$ boson production called the Glashow resonance~\cite{PhysRev.118.316}. The threshold antineutrino energy for such a reaction to occur is $\sim$6.3 PeV. This process dominates the CC and NC interaction albeit only in a small energy range. Proposed in 1959, it was first observed at the IceCube Observatory~\cite{IceCube:2021rpz}. Both CC and NC when interacting with the nucleon undergo neutrino-nucleon deep inelastic scattering where the interacting neutrino scatters off individual quarks inside nucleons (protons or neutrons), leading to the fragmentation of the nucleon and the creation of hadronic (particles made of quarks) jet. At low center-of-mass energies ($\sim$TeV) accelerators can provide most of the information about the neutrino interaction with matter and the corresponding cross-section but at high energies this estimation can either only be calculated via the detection of astrophysical and cosmogenic neutrinos or via a robust theoretical estimation including \gls{QCD} and low energy measurements. The description of \gls*{QCD} at such high energies is still not completely understood. Moreover, physics beyond the Standard Model can also be introduced for these energies which can further affect the neutrino cross-section estimation~\cite{PhysRevD.107.033009}. For the purpose of this thesis, the neutrino cross-sections calculated in~\cite{Cooper_Sarkar_2011} are used. The reference provides an updated $\nu -N$ cross-section calculations with corresponding uncertainties, taking into account the full HERA~\cite{aaron2010combined} data release and combining it with the DGLAP~\cite{ALTARELLI1977298,Dokshitzer:1977sg,Gribov:427157} formalism of QCD. Based on the expected flux the cross-section and the energy of neutrinos it is easy to calculate minimum detector sizes for high-energy neutrinos. For example, for a neutrino of energy $E_{\nu} \sim 1\,\text{PeV} = 10^{15}\,\text{eV}$, the expected flux is $\frac{d^2N_{\nu}}{dt dA} \sim \frac{1}{cm^2 \times 10^5 yr}$, the cross-section is $\sigma_{\nu N} \sim 10^{-8} , \sigma_{pp} \sim 10^{-33}$ and the targets can be estimated as $ N_N \sim N_A \times V/cm^3$ where $N_A$ is the Avogadro's number then the rate of expected events is given by:
+Antineutrinos can also interact with atomic electrons leading to a $W^-$ boson production called the Glashow resonance~\cite{PhysRev.118.316}. The threshold antineutrino energy for such a reaction to occur is $\sim$6.3 PeV. This process dominates the CC and NC interaction albeit only in a small energy range. Proposed in 1959, it was first observed at the IceCube Observatory~\cite{IceCube:2021rpz}. Both CC and NC when interacting with the nucleon undergo neutrino-nucleon deep inelastic scattering where the interacting neutrino scatters off individual quarks inside nucleons (protons or neutrons), leading to the fragmentation of the nucleon and the creation of hadronic (particles made of quarks) jet. At low center-of-mass energies ($\sim$TeV) accelerators can provide most of the information about the neutrino interaction with matter and the corresponding cross-section but at high energies this estimation can either only be calculated via the detection of astrophysical and cosmogenic neutrinos or via a robust theoretical estimation including \gls{QCD} and low energy measurements. The description of \gls*{QCD} at such high energies is still not completely understood. Moreover, physics beyond the Standard Model can also be introduced for these energies which can further affect the neutrino cross-section estimation~\cite{PhysRevD.107.033009}. For the purpose of this thesis, the neutrino cross-sections calculated in~\cite{Cooper_Sarkar_2011} are used. The reference provides an updated $\nu -N$ cross-section calculations with corresponding uncertainties, taking into account the full HERA~\cite{aaron2010combined} data release and combining it with the DGLAP~\cite{ALTARELLI1977298,Dokshitzer:1977sg,Gribov:427157} formalism of QCD. Based on the expected flux the cross-section and the energy of neutrinos it is easy to calculate minimum detector sizes for high-energy neutrinos. For example, for a neutrino of energy $E_{\nu} \sim 1\,\text{PeV} = 10^{15}\,\text{eV}$, the expected flux is $\frac{d^2N_{\nu}}{dt dA} \sim \frac{1}{cm^2 \times 10^5 yr}$, the cross-section is $\sigma_{\nu N} \sim 10^{-8} \times \sigma_{pp} \sim 10^{-33} cm^2$ and the targets can be estimated as $ N_N \sim N_A \times V/cm^3$ where $N_A$ is the Avogadro's number then the rate of expected events is given by:
 
 \begin{equation}
   N_{\nu} \sim N_N \times \sigma_{\nu N} \times \frac{d^2N_{\nu}}{dt dA} \sim \frac{1}{\text{yr}} \times \frac{V}{1\,\mathrm{km^3}}
